JG-2003-11-21-0: Testsuite: Handling of SGE version dependencies.

SG-2003-11-20-0: Enhancem.: - Added the posability to specify what and where
                            conditions for the event and the mirror 
                            interface. 
                            - Added a lSelectElem method, which does the same
                            as lSelect only that it is limited to one elemen
                            - scheduler does not subscribe the global 
                            configuration anymore
                 Review:    JG
                 Changed:   qmaster, scheduler, drama, qevent

EB-2003-11-20-0: Bugfix:    Broken build 

AH-2003-11-19-0: Bugfix:    The drmaa_run_job()/drmaa_run_bulk_jobs() 
                            drmaa_job_template_t * input arguments must be 
                            const.

DT-2003-11-18-1: Bugfix:	 Made changes from code review.  Mostly stylisitic.
                 Changed:   DRMAA & read_defaults.c

DT-2003-11-18-0: Bugfix:    Fixed broken build
                 Changed:   read_defaults.c

SG-2003-11-18-0: Bugfix:    Fixed the build

AD-2003-11-18-0: Bugfix:    Fixed the build

DT-2003-11-17-1: Enhancem.: Implemented remaining DRMAA attributes.  Reworked
                            drmaa_job2sge_job() to reuse the parameter parsing
                            code in parse_job_cull.c, parse_qsub.c,
                            read_deaults.c, etc.  Introduced two new options:
                            -cat (job category) and -wd (set working directory).
                            Both options are only used by DRMAA right now, but
                            could easily be added to qsub et al.  Also added
                            a test to test_drmaa to test all DRMAA attributes.
                 Changed:   libdrmaa.so and common parameter parsing routines

DT-2003-11-17-0: Bugfix.:   -b y in sge_request would override -b n on
                            commandline